Fix CSS formatting by removing unnecessary semicolon in body overflow property

--- a/fontend/task-flow/src/index.css
+++ b/fontend/task-flow/src/index.css
@@ -6,13 +6,12 @@
   --breakpoint-3xl: 1920px;
   --color-primary: blue;
 }
-
 @layer base{
   html{
     font-family: var(--font-display);
   }
   body{
     background-color: #fcfbfc;
-    overflow-x:hidden; ;
+    overflow-x:hidden; 
   }
 }
